[package]
name = "block-shain"
version = "0.1.0"
authors = ["Rached Mejri <r.mejri74100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.1"
mac_address = "1.0.3"
serde_json = "1.0"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }